--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    
    </form>
   
-            <img  src="images/Wynkmusic.jpg" style="width:30%;padding: 10px;margin-bottom:100px ;margin-top: -210px ;position: fixed;height: 450px;">
+            <img  src="https://raw.githubusercontent.com/SumanGaniger1999/wynk/main/Wynkmusic.jpg" style="width:30%;padding: 10px;margin-bottom:100px ;margin-top: -210px ;position: fixed;height: 450px;">
         
   
 </body>
