--- a/register.html
+++ b/register.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
-    <link href="css/register.css" rel="stylesheet">
-    <script type="text/javascript" src="js/register.js"></script>
+    <link href="register.css" rel="stylesheet">
+    <script type="text/javascript" src="register.js"></script>
 </head>
 <body style="background-color: rgba(36, 34, 34, 0.986);">
     <header> 
