--- a/Contact Us.html
+++ b/Contact Us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Contact Us</title>
-    <link href="css/contact.css" rel="stylesheet">
+    <link href="contact.css" rel="stylesheet">
 </head>
 <body style="background-color: rgba(36, 34, 34, 0.986);">
   <header> 
